# LoanAgent

./: .env.sample  .gitignore  README.md  app.py  config.py  graph_architecture.md  langsmith_tracing.py  main.py  pyproject.toml  requirements.txt
graph/: __init__.py  builder.py  journey_nodes.py  llm.py  router.py  state.py  verification_nodes.py
prompts/: __init__.py  extraction_prompts.py
workers/: __init__.py  document_processor.py  processing_store.py
